[metadata]
version = 0.1.0
name = braynsmediamaker
summary = Media Maker plugin for BioExplorer
home-page = https://github.com/BlueBrain/BioExplorer
author = Cyrille Favreau
author-email = bbp-open-source@googlegroups.com
license = LGPLv3
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords = covid19, coronavirus, bbp, BlueBrain

[pycodestyle]
max-line-length = 100

[pydocstyle]
ignore = D203,D212,D400,D401

[coverage:report]
show_missing = True
